Fixed issue where sticky navbar was covering about us title upon hash linking

--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -1,160 +1,181 @@
-.landing-page {
-    padding: 20px;
-}
-
-.landing-hero-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-    background-color: #f9f9f9;
-    margin-bottom: 40px;
-}
-
-.landing-hero-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
-}
-
-.landing-hero-logo {
-    width: 300px;
-    height: auto;
-}
-
-.landing-hero-text {
-    display: flex;
-    flex-direction: column;
-}
-
-.landing-hero-text h2 {
-    font-size: 2.5rem;
-    font-weight: 600;
-    color: #25738b;
-    max-width: 600px;
-    text-align: center;
-}
-
-.landing-about-section {
-    margin-bottom: 40px;
-    background-color: white;
-    padding: 40px;
-    border-radius: 20px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.landing-about-section h2 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #25738b;
-}
-
-.landing-about-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-}
-
-.landing-about-image {
-    width: 50%;
-    border-radius: 15px;
-    object-fit: cover;
-}
-
-.landing-about-content p {
-    width: 50%;
-    font-size: 16px;
-    color: #333;
-    line-height: 1.6;
-    padding-left: 20px;
-}
-
-.landing-services-section {
-    background-color: white;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.landing-services-section h2 {
-    text-align: center;
-    font-size: 28px;
-    margin-bottom: 20px;
-    color: #25738b;
-}
-
-.landing-services-grid {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.landing-service-card {
-    position: relative;
-    text-align: center;
-    width: 30%;
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
-    overflow: hidden;
-}
-
-.landing-service-card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
-
-.landing-service-card h3 {
-    color: #333;
-    font-size: 20px;
-}
-
-.landing-service-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.landing-service-description {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    background-color: rgba(0, 0, 0, 0.36);
-    color: white;
-    text-shadow: 2px 2px rgb(105, 105, 105);
-    text-align: center;
-    padding: 15px;
-    border-radius: 10px;
-    opacity: 0;
-    transition: opacity 0.4s ease, transform 0.4s ease;
-}
-
-.landing-service-card:hover .landing-service-description {
-    opacity: 1;
-    transform: translate(-50%, -50%);
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-[data-aos="fade-right"],
-[data-aos="fade-left"] {
-    opacity: 0;
-    transform: translateX(50px);
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-}
-
-[data-aos].aos-animate {
-    opacity: 1;
-    transform: translateX(0);
-}
+#about {
+    scroll-margin-top: 70px;
+  }
+  
+  .landing-page {
+      padding: 20px;
+  }
+  
+  .landing-hero-section {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 80vh;
+      background-color: #f9f9f9;
+      margin-bottom: 40px;
+  }
+  
+  .landing-hero-content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 40px;
+  }
+  
+  .landing-hero-logo {
+      width: 300px;
+      height: auto;
+  }
+  
+  .landing-hero-text {
+      display: flex;
+      flex-direction: column;
+  }
+  
+  .landing-hero-text h2 {
+      font-size: 2.5rem;
+      font-weight: 600;
+      color: #25738b;
+      max-width: 600px;
+      text-align: center;
+  }
+  
+  .landing-about-section {
+      margin-bottom: 40px;
+      background-color: white;
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+  
+  .landing-about-section h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #25738b;
+  }
+  
+  .landing-about-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 20px;
+  }
+  
+  .landing-about-image {
+      width: 50%;
+      border-radius: 15px;
+      object-fit: cover;
+  }
+  
+  .landing-about-content p {
+      width: 50%;
+      font-size: 16px;
+      color: #333;
+      line-height: 1.6;
+      padding-left: 20px;
+  }
+  
+  .landing-services-section {
+      background-color: white;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+  
+  .landing-services-section h2 {
+      text-align: center;
+      font-size: 28px;
+      margin-bottom: 20px;
+      color: #25738b;
+  }
+  
+  .landing-services-grid {
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+  }
+  
+  .landing-service-card {
+      position: relative;
+      text-align: center;
+      width: 30%;
+      background-color: white;
+      border-radius: 10px;
+      padding: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+      overflow: hidden;
+  }
+  
+  .landing-service-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 10px;
+  }
+  
+  .landing-service-card h3 {
+      color: #333;
+      font-size: 20px;
+  }
+  
+  .landing-service-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+  
+  .landing-service-description {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      background-color: rgba(0, 0, 0, 0.36);
+      color: white;
+      text-shadow: 2px 2px rgb(105, 105, 105);
+      text-align: center;
+      padding: 15px;
+      border-radius: 10px;
+      opacity: 0;
+      transition: opacity 0.4s ease, transform 0.4s ease;
+  }
+  
+  .landing-service-card:hover .landing-service-description {
+      opacity: 1;
+      transform: translate(-50%, -50%);
+  }
+  
+  html {
+      scroll-behavior: smooth;
+  }
+  
+  [data-aos="fade-right"],
+  [data-aos="fade-left"] {
+      opacity: 0;
+      transform: translateX(50px);
+      transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+  
+  [data-aos].aos-animate {
+      opacity: 1;
+      transform: translateX(0);
+  }
+  
+  @media (max-width: 768px) {
+    .landing-about-content,
+    .landing-services-grid {
+      flex-direction: column;
+    }
+  
+    .landing-about-image,
+    .landing-about-content p {
+      width: 100%;
+    }
+  
+    .landing-service-card {
+      width: 100%;
+    }
+  }
+  
